force-app/main/default/objects/Quote__c/fields/Requested_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Delivery_Date__c</fullName>
    <inlineHelpText>Requested Delivery Date updates the field &apos;Projected Delivery Date&apos; at the quote line. If different dates apply to lines, that can be updated in that line&apos;s &apos;Additional Details&apos;.</inlineHelpText>
    <label>Requested Delivery Date</label>
    <type>Date</type>
</CustomField>