force-app/main/default/objects/Quote__c/fields/Returned_From_Field_Sourcing_On__c.field-meta.xml
<CustomField>
    <fullName>Returned_From_Field_Sourcing_On__c</fullName>
    <description>Populated via workflow rule when the stage is changed to Returned from Field Sourcing. Previously titled Returned from Merchandiser On.

Description edited 12/8/2016,</description>
    <inlineHelpText>Time when Quote Stage was changed to equal Returned from Field Sourcing</inlineHelpText>
    <label>Returned From Field Sourcing On</label>
    <type>DateTime</type>
</CustomField>