force-app/main/default/objects/Quote__c/fields/Returned_From_Merchandising_On__c.field-meta.xml
<CustomField>
    <fullName>Returned_From_Merchandising_On__c</fullName>
    <label>Returned From Merchandising On</label>
    <type>DateTime</type>
</CustomField>