force-app/main/default/objects/Quote__c/fields/Saved__c.field-meta.xml
<CustomField>
    <fullName>Saved__c</fullName>
    <description>Changes a picture on the quote depending on whether all required information was saved</description>
    <formula>IF(OR
( Account__c = &quot;&quot;,  
Customer_Contact__c = &quot;&quot;,  
TEXT(Expiration_Date__c) = &quot;&quot;,  
Primary_Sales_Rep__c =&quot;&quot;,  
Subject__c = &quot;&quot;),  
IMAGE(&quot;/resource/1340643640000/StopSign&quot;, &quot;Please save after filling in all Required Information&quot;),   
&quot;Quote Saved&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saved?</label>
    <type>Text</type>
</CustomField>