force-app/main/default/objects/Quote__c/fields/Sent_to_Field_Sourcing_On__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Field_Sourcing_On__c</fullName>
    <description>Populated via workflow rule when the stage is changed to With Field Sourcing. Previously titled Sent to Merchandiser On.

Description edited 12/8/2016.</description>
    <inlineHelpText>Time the stage was changed to equal With Field Sourcing</inlineHelpText>
    <label>Sent to Field Sourcing On</label>
    <type>DateTime</type>
</CustomField>