force-app/main/default/objects/Quote__c/fields/Sent_to_Merchandising_On__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Merchandising_On__c</fullName>
    <label>Sent to Merchandising On</label>
    <type>DateTime</type>
</CustomField>