force-app/main/default/objects/Quote__c/fields/Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Service_Level__c</fullName>
    <description>This field is a cross object formula field and displays the Service Level from the Account on the Quote Screen</description>
    <formula>CASE(Account__r.Service_Level__c, &quot;G&quot;, &quot;Gold&quot;, &quot;P&quot;, &quot;Platinum&quot;, &quot;S&quot; ,&quot;Standard&quot;, &quot;Gold&quot;, &quot;Gold&quot;, &quot;Platinum&quot;, &quot;Platinum&quot;, &quot;Standard&quot;, &quot;Standard&quot;, &quot;N/A&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Level</label>
    <type>Text</type>
</CustomField>