force-app/main/default/objects/Quote__c/fields/Servicing_Division__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Division__c</fullName>
    <formula>/* OLD FORMULA */ 
/* 
IF(Account__r.RecordTypeId = &quot;012700000009OvZ&quot;, Account__r.Servicing_Division__r.Division_Code__c, IF( Ship_To_Account__r.Legacy_Division_Cd__c = &quot;&quot;, Account__r.Legacy_Division_Cd__c, Ship_To_Account__r.Legacy_Division_Cd__c)) 
*/ 

IF(Account__r.RecordTypeId = &quot;012700000009OvZ&quot;, 
/* RecordTypeId = Prospect */ 
BLANKVALUE(Account__r.Legacy_Division_Cd__c, 
BLANKVALUE(Account__r.Servicing_Division__r.Division_Code__c, Account__r.Primary_Sales_Rep_Name__r.Servicing_Division__r.Division_Code__c)), 
/* RecordTypeId = Customer */ 
BLANKVALUE(Ship_To__r.Legacy_Division_Code__c, 
BLANKVALUE(Account__r.Legacy_Division_Cd__c, BLANKVALUE(Account__r.Servicing_Division__r.Division_Code__c, BLANKVALUE(Account__r.Legacy_Division_Cd__c, Account__r.Primary_Sales_Rep_Name__r.Servicing_Division__r.Division_Code__c))) 
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Servicing Division</label>
    <type>Text</type>
</CustomField>