force-app/main/default/objects/Quote__c/fields/Servicing_Division_Name__c.field-meta.xml
<CustomField>
    <fullName>Servicing_Division_Name__c</fullName>
    <formula>IF(Account__r.RecordTypeId = &quot;012700000009OvZ&quot;, 
/* RecordTypeId = Prospect */ 
BLANKVALUE(Account__r.Legacy_Division_Desc__c, BLANKVALUE(Account__r.Servicing_Division__r.Name, Account__r.Primary_Sales_Rep_Name__r.Servicing_Division__r.Name)), 
/* RecordTypeId = Customer */ 
BLANKVALUE(Ship_To__r.Legacy_Division_Desc__c, 

BLANKVALUE(Account__r.Legacy_Division_Desc__c, 
BLANKVALUE(Account__r.Servicing_Division__r.Name, 
BLANKVALUE(Account__r.Legacy_Division_Desc__c, Account__r.Primary_Sales_Rep_Name__r.Servicing_Division__r.Name))) 
))</formula>
    <label>Servicing Division Name</label>
    <type>Text</type>
</CustomField>