force-app/main/default/objects/Quote__c/fields/Ship_To_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Number__c</fullName>
    <formula>IF(LEN(Ship_To__r.Ship_To_Code__c) = 12, RIGHT( Ship_To__r.Ship_To_Code__c , 6), &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Code</label>
    <type>Text</type>
</CustomField>