force-app/main/default/objects/Quote__c/fields/Shipment_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Method__c</fullName>
    <label>Shipment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
            <value>
                <fullName>TSB Combo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>