force-app/main/default/objects/Quote__c/fields/System_Code__c.field-meta.xml
<CustomField>
    <fullName>System_Code__c</fullName>
    <formula>IF(Account__r.RecordTypeId = &quot;012700000009OvZ&quot;, Account__r.Servicing_Division__r.System_Code__c, IF( Ship_To_Account__r.Legacy_System_Cd__c = &quot;&quot;, Account__r.Legacy_System_Cd__c, Ship_To_Account__r.Legacy_System_Cd__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Code</label>
    <type>Text</type>
</CustomField>