force-app/main/default/objects/Quote__c/fields/TSB_Account__c.field-meta.xml
<CustomField>
    <fullName>TSB_Account__c</fullName>
    <label>TSB Account</label>
    <length>20</length>
    <type>Text</type>
</CustomField>