force-app/main/default/objects/Quote__c/fields/TSB_Segment__c.field-meta.xml
<CustomField>
    <fullName>TSB_Segment__c</fullName>
    <label>TSB Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>Pkg</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>