force-app/main/default/objects/Quote__c/fields/Vendor_Comments__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Comments__c</fullName>
    <label>Vendor Comments (will print on Quote)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>