force-app/main/default/objects/Quote__c/validationRules/Check_Account_is_Customer_or_Prospect.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Account_is_Customer_or_Prospect</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Account__r.RecordTypeId &lt;&gt; &quot;012700000009Ovo&quot;, Account__r.RecordTypeId &lt;&gt; &quot;012700000009OvZ&quot;)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Quotes can be created only for Customer or Prospect Accounts!</errorMessage>
</ValidationRule>