force-app/main/default/objects/Quote__c/validationRules/Expiration_Value_on_Quote_Stage_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiration_Value_on_Quote_Stage_Field</fullName>
    <active>true</active>
    <description>Expiration Value cannot be selected by users unless it is 30 days after expiration date</description>
    <errorConditionFormula>or(and(
isnew(),
ISPICKVAL(Quote_Stage__c,&quot;Expired&quot;),
$User.ProfileId &lt;&gt; &quot;00e70000000swa5&quot;,
$User.ProfileId &lt;&gt; &quot;00e70000000jhij&quot;)
,(AND(
ISCHANGED( Quote_Stage__c ),
ISPICKVAL(Quote_Stage__c,&quot;Expired&quot;),
$User.ProfileId &lt;&gt; &quot;00e70000000swa5&quot;,
$User.ProfileId &lt;&gt; &quot;00e70000000jhij&quot;)))</errorConditionFormula>
    <errorDisplayField>Quote_Stage__c</errorDisplayField>
    <errorMessage>You do not have permissions to Expire a Quote. Please pick a different value.</errorMessage>
</ValidationRule>