force-app/main/default/objects/Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Customer_Contact__c</columns>
    <columns>Subject__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Count_of_Line_Items__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <label>1 - All</label>
    <language>en_US</language>
</ListView>