force-app/main/default/objects/Quote__c/listViews/Created_This_Week.listView-meta.xml
<ListView>
    <fullName>Created_This_Week</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer_Contact__c</columns>
    <columns>Subject__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>1 - Created This Week</label>
    <language>en_US</language>
</ListView>