force-app/main/default/objects/Quote__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Customer_Contact__c</columns>
    <columns>Subject__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Count_of_Line_Items__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>1 - Created Today</label>
    <language>en_US</language>
</ListView>