force-app/main/default/objects/Quote__c/listViews/Facilities_Field_Sourcing_Quote.listView-meta.xml
<ListView>
    <fullName>Facilities_Field_Sourcing_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>ZZField Sourcing Facilities</label>
    <queue>Facilities_Field_Sourcing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>