force-app/main/default/objects/Quote__c/listViews/MA_Quotes_without_Accounts.listView-meta.xml
<ListView>
    <fullName>MA_Quotes_without_Accounts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Expiration_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_90_DAYS</value>
    </filters>
    <label>MA - Quotes without Accounts</label>
    <language>en_US</language>
    <sharedTo></sharedTo>
</ListView>