force-app/main/default/objects/Quote__c/listViews/My_Quotes.listView-meta.xml
<ListView>
    <fullName>My_Quotes</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Subject__c</columns>
    <columns>Shipment_Method__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Count_of_Line_Items__c</columns>
    <filterScope>Mine</filterScope>
    <label>2 - My Quotes</label>
    <language>en_US</language>
</ListView>