force-app/main/default/objects/Quote__c/listViews/My_Quotes_Expiring_Soon.listView-meta.xml
<ListView>
    <fullName>My_Quotes_Expiring_Soon</fullName>
    <columns>NAME</columns>
    <columns>Quote_Stage__c</columns>
    <columns>Account__c</columns>
    <columns>Subject__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Primary_Sales_Rep__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:10</value>
    </filters>
    <filters>
        <field>Quote_Stage__c</field>
        <operation>notEqual</operation>
        <value>Lost,Won,Expired</value>
    </filters>
    <label>4 - My Quotes Expiring Soon</label>
    <language>en_US</language>
</ListView>