force-app/main/default/objects/Quote__c/listViews/Packaging_Field_Sourcing_Quote.listView-meta.xml
<ListView>
    <fullName>Packaging_Field_Sourcing_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>ZZField Sourcing Packaging</label>
    <queue>Packaging_Field_Sourcing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>