force-app/main/default/objects/Quote__c/listViews/Print_Field_Sourcing_Quote.listView-meta.xml
<ListView>
    <fullName>Print_Field_Sourcing_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Field Sourcing Print</label>
    <queue>Print_Field_Sourcing</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>