force-app/main/default/objects/Quote__c/listViews/Sourcing_Central_Print_Quote.listView-meta.xml
<ListView>
    <fullName>Sourcing_Central_Print_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Sourcing - Central - Print</label>
    <queue>Sourcing_Central_Print</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>