force-app/main/default/objects/Quote__c/listViews/Sourcing_North_FS_Quote.listView-meta.xml
<ListView>
    <fullName>Sourcing_North_FS_Quote</fullName>
    <filterScope>Queue</filterScope>
    <label>Sourcing - North - FS</label>
    <queue>Sourcing_North_FS</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>